homework/7.advanced-abstractions/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: prometheus-service
  labels:
    app: prometheus
spec:
  ports:
  - port: 80
    targetPort: 9090
  selector:
    app: prometheus
